[tool.poetry]
name = "chiungyaollm"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
requests = "^2.32.0"
tweepy = "^4.14.0"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
